force-app/main/default/objects/Finding__c/Finding__c.object-meta.xml
<CustomObject>
    <label>Finding</label>
    <pluralLabel>Findings</pluralLabel>
    <nameField>
        <displayFormat>FIND-{00000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>