force-app/main/default/objects/Finding__c/fields/Agent_Audit_Report__c.field-meta.xml
<CustomField>
    <fullName>Agent_Audit_Report__c</fullName>
    <label>Agent Audit Report</label>
    <type>MasterDetail</type>
    <referenceTo>Agent_Audit_Report__c</referenceTo>
    <relationshipName>Findings</relationshipName>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>