force-app/main/default/objects/Finding__c/fields/Agent_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Agent_Narrative__c</fullName>
    <label>Agent Narrative</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>