force-app/main/default/objects/Finding__c/fields/Annual_CO2e_g_Central__c.field-meta.xml
<CustomField>
    <fullName>Annual_CO2e_g_Central__c</fullName>
    <label>Annual CO2e g Central</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>