force-app/main/default/objects/Finding__c/fields/Annual_Energy_Savings_Wh_High__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Savings_Wh_High__c</fullName>
    <label>Annual Energy Savings Wh High</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>