force-app/main/default/objects/Finding__c/fields/Annual_Energy_Wh_Low__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Wh_Low__c</fullName>
    <label>Annual Energy Wh Low</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>