force-app/main/default/objects/Finding__c/fields/Annual_Water_mL_High__c.field-meta.xml
<CustomField>
    <fullName>Annual_Water_mL_High__c</fullName>
    <label>Annual Water mL High</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>