force-app/main/default/objects/Finding__c/fields/Annual_Water_mL_Low__c.field-meta.xml
<CustomField>
    <fullName>Annual_Water_mL_Low__c</fullName>
    <label>Annual Water mL Low</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>