force-app/main/default/objects/Finding__c/fields/Artifact_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Api_Name__c</fullName>
    <label>Artifact Api Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>