force-app/main/default/objects/Finding__c/fields/Artifact_Key__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Key__c</fullName>
    <label>Logical Artifact Key</label>
    <type>Text</type>
    <length>64</length>
</CustomField>