force-app/main/default/objects/Finding__c/fields/Artifact_Tooling_Id__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Tooling_Id__c</fullName>
    <label>Artifact Tooling Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>