force-app/main/default/objects/Finding__c/fields/Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Type__c</fullName>
    <label>Artifact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Agent</fullName><default>false</default><label>Agent</label></value>
            <value><fullName>Topic</fullName><default>false</default><label>Topic</label></value>
            <value><fullName>Action</fullName><default>false</default><label>Action</label></value>
            <value><fullName>PromptTemplate</fullName><default>false</default><label>PromptTemplate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>