force-app/main/default/objects/Finding__c/fields/Estimated_Annual_Calls__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Calls__c</fullName>
    <label>Estimated Annual Calls</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>
</CustomField>