force-app/main/default/objects/Finding__c/fields/Finding_Status__c.field-meta.xml
<CustomField>
    <fullName>Finding_Status__c</fullName>
    <label>Finding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
            <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>