force-app/main/default/objects/Finding__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <label>Generated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Deterministic</fullName><default>true</default><label>Deterministic</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>