force-app/main/default/objects/Finding__c/fields/Instructions_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Snapshot__c</fullName>
    <label>Instructions Snapshot</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Raw instructions (topic Scope / agent or action instructions) captured at audit time for INSTRUCTION_BLOAT findings, so the before/after diff (Wave 5) can show the pre-trim text.</description>
    <inlineHelpText>Snapshot of the audited artifact's raw instructions at the time the bloat finding was recorded.</inlineHelpText>
</CustomField>