force-app/main/default/objects/Finding__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <label>Stable Issue Key</label>
    <type>Text</type>
    <length>64</length>
</CustomField>