force-app/main/default/objects/Finding__c/fields/Metric_Unit__c.field-meta.xml
<CustomField>
    <fullName>Metric_Unit__c</fullName>
    <label>Metric Unit</label>
    <type>Text</type>
    <length>40</length>
</CustomField>