force-app/main/default/objects/Finding__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <label>Metric Value</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>