force-app/main/default/objects/Finding__c/fields/Parent_Topic_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Topic_Api_Name__c</fullName>
    <label>Parent Topic Api Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>