force-app/main/default/objects/Finding__c/fields/Per_Inference_Wh__c.field-meta.xml
<CustomField>
    <fullName>Per_Inference_Wh__c</fullName>
    <label>Per Inference Wh</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>6</scale>
</CustomField>