force-app/main/default/objects/Finding__c/fields/Process_Key__c.field-meta.xml
<CustomField>
    <fullName>Process_Key__c</fullName>
    <label>Logical Process Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>