force-app/main/default/objects/Finding__c/fields/Recommended_Target__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Target__c</fullName>
    <label>Recommended Target</label>
    <type>Text</type>
    <length>255</length>
</CustomField>