force-app/main/default/objects/Finding__c/fields/Remediation_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Task_Id__c</fullName>
    <label>Remediation Task Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>