force-app/main/default/objects/Finding__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LLM_WHERE_DETERMINISTIC</fullName><default>false</default><label>LLM_WHERE_DETERMINISTIC</label></value>
            <value><fullName>MODEL_RIGHTSIZING</fullName><default>false</default><label>MODEL_RIGHTSIZING</label></value>
            <value><fullName>INSTRUCTION_BLOAT</fullName><default>false</default><label>INSTRUCTION_BLOAT</label></value>
            <value><fullName>REDUNDANT_CALLS</fullName><default>false</default><label>REDUNDANT_CALLS</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>